[workspace]
resolver = "2"
members = ["crates/domain", "crates/classifier", "crates/proxy"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/sdeanesh-png/Tokenova"
authors = ["Tokenova"]

[workspace.dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["macros"] }
bytes = "1"
futures = "0.3"
futures-util = "0.3"
http = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream", "http2"] }
sentry = { version = "0.36", default-features = false, features = ["backtrace", "contexts", "panic", "reqwest", "rustls"] }
sentry-tracing = "0.36"
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "time"] }
serde_json = "1"
thiserror = "1"
time = { version = "0.3", features = ["serde", "formatting", "parsing"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["v4", "serde"] }

# dev
criterion = { version = "0.5", features = ["html_reports"] }
wiremock = "0.6"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"

[profile.bench]
debug = true
