[package]
name = "tokenova-domain"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared domain types for the Tokenova platform."

[lib]
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }
uuid = { workspace = true }
