[package]
name = "tokenova-proxy"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Universal API proxy — intercepts, classifies, and forwards AI calls to upstream providers (PRD §5.1)."

[[bin]]
name = "tokenova-proxy"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[features]
# Exposes the `observability::test_sink` module used by integration tests
# under `crates/proxy/tests/*.rs` to assert on emitted `LogRecord`s.
# Gated because production builds should not carry a public API that lets
# a third-party consumer install a sink to exfiltrate log records.
test-utils = []

[dependencies]
tokenova-domain = { path = "../domain" }
tokenova-classifier = { path = "../classifier" }

anyhow = { workspace = true }
axum = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
http = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
wiremock = { workspace = true }

# Integration tests that introspect emitted `LogRecord`s need the
# `test-utils` feature to compile the `observability::test_sink` module.
# Tests without this marker (body limits, passthrough byte equality) run
# on the default build.
[[test]]
name = "openai_streaming"
required-features = ["test-utils"]

[[test]]
name = "anthropic_streaming"
required-features = ["test-utils"]
